feat: add github actions
